separated some functions for afficiency and faster download

--- a/index.html
+++ b/index.html
@@ -46,13 +46,10 @@
     </div>
 </nav>
 <body>
-
-    <div class="container">
-        <center>
-            <span data-bind="html: loader"></span>
-        </center>
+    <div class="devider"></div>
+    <div class="center">
+        <h1>Home</h1>
     </div>
-
     <!-- Local javascript files -->
     <script src="./javascripts/knockout-3.4.2.js"></script>
     <script src="./javascripts/jquery-3.3.1.min.js"></script>
