--- a/blogs.html
+++ b/blogs.html
@@ -12,13 +12,105 @@
     <link rel="stylesheet" href="./stylesheets/materialize/css/materialize.css">
     <link rel="stylesheet" href="./stylesheets/main.css">
 </head>
+<nav class="red lighten-1" role="navigation">
+    <div class="nav-wrapper container">
+        <a id="logo-container" href="index.html" class="brand-logo">
+            <i class="material-icons">code</i>
+        </a>
+        <ul class="right hide-on-med-and-down">
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="blogs.html">Blogs</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
 
+        <ul id="nav-mobile" class="side-nav">
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="blogs.html">Blogs</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+        <a href="#" data-activates="nav-mobile" class="button-collapse">
+            <i class="white-text text-darken-4 material-icons">menu</i>
+        </a>
+    </div>
+</nav>
 <body>
 
     <div class="container">
-        <center>
-            <span data-bind="html: loader"></span>
-        </center>
+        <div class="row">
+            <center>
+                <br><br><br>
+                <span data-bind="html: loader"></span>
+            </center>
+            <div data-bind="visible: data, foreach: blogs">
+                <div class="col s12 m6">
+                    <div class="card transparent darken-1 hoverable">
+                        <div class="card-content white-text">
+                            <span class="card-title">
+                                <strong><small data-bind="text: date"></small></strong>
+                                <hr>
+                            </span>
+                            <p data-bind="text: blog"></p>
+                        </div>
+                        <div data-bind="foreach: hashtags">
+                            <i class="yellow-text new badge" data-bind="text: $data"></i>
+                        </div>
+                        <div class="card-action">
+                            <a class="white-text" data-bind="click: $parent.like"><i class="material-icons">thumb_up</i><i data-bind="text: likes"></i></a>
+                            <a class="white-text" data-bind="click: $parent.dislike"><i class="material-icons">thumb_down</i><i data-bind="text: dislikes"></i></a>
+                            <a href="#modal1" class="white-text modal-trigger" data-bind="click: $parent.getComments"><i class="material-icons">chat</i><i data-bind="text: comments"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Modal Structure for All The Comments -->
+        <div id="modal1" class="modal bottom-sheet" style="padding: 45px;">
+            <div class="container">
+                <div class="row">
+                    <form class="col s12">
+                        <h4>Comments</h4>
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <textarea id="textarea1" class="materialize-textarea comment"></textarea>
+                                <label for="textarea1">Textarea</label>
+                            </div>
+                            <button class="btn" data-bind="click: comment">Post <i class="material-icons">send</i></button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="modal-content">
+                <div data-bind="foreach: comments">
+                    <ul class="collection">
+                        <li class="collection-item" style="padding: 20px;">
+                            <span data-bind="text: date"></span>
+                            <hr>
+                            <p data-bind="text: comments"></p>
+                            <hr>
+                            <div data-bind="foreach: hashtags">
+                                <i data-bind="text: $data"></i>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat red white-text">close</a>
+            </div>
+        </div>
     </div>
 
     <!-- Local javascript files -->
@@ -26,6 +118,8 @@
     <script src="./javascripts/jquery-3.3.1.min.js"></script>
     <script src="./stylesheets/materialize/js/materialize.js"></script>
     <script src="./javascripts/main.js"></script>
+    <script src="./javascripts/navBar.js"></script>
+    <script src="./javascripts/modals.js"></script>
 </body>
 
 </html>
